Fixed nasty bug where an artist with lots of albums would have truncated album list; Added track/album purchasing via Rdio

--- a/theme/cramppbo/css/style.css
+++ b/theme/cramppbo/css/style.css
@@ -527,24 +527,28 @@ dd {
   display: inherit;
 }
 
-#queue .track .detail .markstatus, #queue .track .detail .like, #queue .track .detail .dislike, #queue .track .detail .unmark {
+#queue .track .detail .markstatus, #queue .track .detail .like, #queue .track .detail .dislike, #queue .track .detail .unmark, #queue .track .detail .buytrack, #queue .track .detail .buyalbum {
   position: absolute;
-  top: 130px;
-}
-
-#queue .track .detail .like, #queue .track .detail .dislike, #queue .track .detail .unmark {
   cursor: pointer;
 }
 
-#queue .track .detail .markstatus, #queue .track .detail .like {
+#queue .track .detail .buytrack, #queue .track .detail .buyalbum {
+  top: 110px;
+}
+
+#queue .track .detail .markstatus, #queue .track .detail .like, #queue .track .detail .dislike, #queue .track .detail .unmark {
+  top: 130px;
+}
+
+#queue .track .detail .buytrack, #queue .track .detail .markstatus, #queue .track .detail .like {
   left: 20px;
 }
 
-#queue .track .detail .dislike, #queue .track .detail .unmark {
+#queue .track .detail .dislike, #queue .track .detail .unmark, #queue .track .detail .buyalbum {
   left: 110px;
 }
 
-#queue .track .detail .markstatus img, #queue .track .detail .like img, #queue .track .detail .dislike img, #queue .track .detail .unmark img {
+#queue .track .detail .markstatus img, #queue .track .detail .like img, #queue .track .detail .dislike img, #queue .track .detail .unmark img, #queue .track .detail .buytrack img, #queue .track .detail .buyalbum img {
   padding-right: 7px;
   height: 10px;
   width: 10px;
